# Grinta-Agent

./: .bandit  .coverage  .coverage-agenthub  .coverage-audit  .coverage.security  .coverage_controller  .coveragerc-agenthub  .coveragerc-audit  .coveragerc-cli  .coveragerc-events  .dockerignore  .env.local  .gitignore  .gitmodules  .isort.cfg  .pre-commit-config.yaml  .prettierignore  .pylintrc  ARCHITECTURE.md  AUTH_INVARIANTS.md  AUTH_SIMPLIFICATION_GUIDE.md  BETA_LAUNCH_CHECKLIST.md  CHANGELOG.md  CITATION.cff  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DOCUMENTATION_INDEX.md  Dockerfile  FAILURE_PATTERN_ANALYSIS.md  FRONTEND_TEST_ANALYSIS.md  FRONTEND_TEST_EXECUTION_GUIDE.md  FRONTEND_TEST_QUICK_REFERENCE.md  LICENSE  Makefile  QUICK_FIX.ps1  QUICK_START.md  README.md  RUN_NOW.ps1  SECURITY.md  START_HERE.ps1  (+81 more)
.devcontainer/: devcontainer.json  setup.sh
.github/: CODEOWNERS  copilot-instructions.md  dependabot.yml  pull_request_template.md
.openhands/: pre-commit.sh
.scripts/: check_doc_first_line.py  inspect_docstrings.py
backend/: README.md  README_FORGE.md  __init__.py  _canonical.py  conftest.py  restart_forge.bat  validate_imports.py
containers/: README.md  build.sh
debug_backups/: 96.41329850281282.metadata.json
docs/: API_REFERENCE.md  ARCHITECTURE.md  AUTH.md  AUTHENTICATION_IMPLEMENTATION.md  BACKEND_TESTS_IMPLEMENTATION.md  CHANGES_2025_01.md  CODE_QUALITY.md  COMPLETE_IMPLEMENTATION_REPORT.md  DOCUMENTATION_CONSOLIDATION.md  FINAL_IMPLEMENTATION_STATUS.md  FRONTEND_AUTH_IMPLEMENTATION.md  IMPLEMENTATION_SUMMARY.md  KNOWN-SECURITY-ISSUES.md  MONITORING.md  PAGE_STRUCTURE_DIAGRAM.md  README.md  REFACTORED_NAVIGATION.md  REFACTORING_CHANGELOG.md  SECURITY-AUDIT-REPORT.md  SENTRY_SETUP_INSTRUCTIONS.md  TROUBLESHOOTING.md  active-features.md  advanced_features.md  api-reference.md  api-versioning-guide.md  api-versioning-implementation-complete.md  api.md  backend-improvements-implementation.md  backend-improvements-part2.md  beta-launch-checklist.md  beta-launch-status.md  beta-launch-strategy.md  beta-release-notes.md  billing-setup.md  changelog.md  code-quality.md  codebase-analysis.md  common-issues.md  competitive-assessment.md  configuration.md  (+45 more)
docs_website/: CONFIG_LLMS.md  DOC_STYLE_GUIDE.md  PHASE2_OVERVIEW.md  SET_API_KEYS.md  docs.json  index.mdx  n_candidates.md  openapi.json
evaluation/: README.md
forge/: __init__.py
frontend/: .env.local  .env.sample  .eslintignore  .eslintrc  .eslintrc.complexity.json  .gitignore  README.md  ROUTE_FIX.md  components.json  contrast-scan-report.json  eslint-results.json  eslint-top10.json  global.d.ts  index.html  lint-output.txt  node-websocket.mjs  package-lock.json  package.json  playwright.config.ts  playwright.local.config.ts  playwright.local.noserver.config.ts  playwright.static.config.ts  react-router.config.ts  serve-build.cjs  serve-build.js  tailwind.config.js  test-failures.txt  test-full-output.txt  test-output-batch1.txt  test-results-detailed.txt  test-results-filtered-v2.json  test-results-filtered.json  test-results-included-real.json  test-results-included.json  test-results.json  test-results.txt  test-utils.ts  test-utils.tsx  tmp-report.json  tmp-report2.json  (+13 more)
microagents/: README.md  add_agent.md  add_repo_inst.md  address_pr_comments.md  agent_memory.md  api.md  bitbucket.md  codereview-roasted.md  default-tools.md  flarglebargle.md  github.md  gitlab.md  update_pr_description.md  update_test.md
monitoring/: README.md  docker-compose.override.example.yml  docker-compose.yml
openhands/: README.md  __init__.py
prompts/: 002636a1-e7b0-4357-9058-6138a9b3cee4.json  003a8334-4765-47d1-99ae-83f8bca2da44.json  02227cfd-6614-4a0a-ad6e-f910d1615443.json  025852b5-67d7-4e3a-9382-652b632eb257.json  02664027-48d2-4fe2-9148-12c878610722.json  04fa118f-9d7e-4d3a-936d-410f5605edfc.json  07197dcd-2d99-4b30-a3e8-8c51803fb563.json  07ecf4e0-a402-4f84-a9e8-bee1b61ddf3e.json  07ed05b7-04ab-430a-8af7-56ee8be309b1.json  080e737a-6814-4dfa-bd53-bce4060556da.json  09a16eb3-a3cb-4738-82a9-3ab150e02e60.json  0d53482a-ed42-4426-b419-100e78e01922.json  0f4ad970-5783-4264-9463-df73be22ff54.json  0fb3420b-8b36-443c-a518-1c5b75797cce.json  0fce8917-906f-49ea-b891-68b8e0a1df59.json  101a7625-e308-41a5-9aef-5d2f7bdcacad.json  14136467-e950-45cb-9068-ddde03dd9b9c.json  15334f67-797b-4f74-aed4-c8543b450dd2.json  15fb52f2-c36f-4bd9-aafb-ad8dd7dfeeff.json  164ac80d-f65e-4ecc-be0a-c7591befd3c9.json  182eaf62-3ac8-451b-a195-ee410eaa2c1c.json  18a5bb4a-224c-4c42-bae8-2def69450873.json  19bff4f5-13af-496e-b3cc-1c340e0d5cb9.json  19ca98f9-1985-4d45-bf5c-c2550e864d52.json  19ee8977-f7ac-49a7-965c-69dde79131ba.json  1a004567-fd07-4a2d-9391-665d0a8b62f8.json  1c7b5226-0c8c-4b31-a75d-1add10a82bab.json  1c7f0006-af9a-44e2-9d45-afba9521af31.json  1c8eab6b-a27a-40bd-8294-05bb2696cf26.json  1d06b315-95ed-4ad8-b867-b69a3dcabee7.json  1d0c8598-b694-4ed9-9528-c45f8d768103.json  1d1a4322-757d-4686-805f-0f32427881d8.json  1d443284-9a01-423a-afb8-4f72798df33c.json  1d4907ed-7306-40ef-95ff-26a0952d534f.json  1ffa350a-a4af-4f68-99ed-a3e6deca41b9.json  1ffca6fa-e61e-429d-a353-50dbf148ce26.json  21ae535f-e2f6-4d21-9611-d6c27d7cbe40.json  23119c11-ee0f-4cfd-9f69-06d0d43d687f.json  234fb59d-cf40-46ab-a941-494a93166afd.json  244d1590-4d98-4b2b-ba44-b84ca4d6d9fe.json  (+279 more)
reports/: frontend-lint.txt  frontend-typecheck.txt
scripts/: _test_pickle_metrics.py  assistant-prefs.json  auto_fix_d205.py  compile_protos.py  coverage_probe.py  debug_fncall_diff.py  debug_fncall_diff_index.out  debug_fncall_diff_index.py  debug_inproc_verbose.py  debug_metasop_template.py  dev_server.py  fix_logging_fstrings.py  generate-api-types.ps1  generate-api-types.sh  import_probe_runtime.py  inproc_metasop_run96.py  inproc_metasop_test.py  probe_import_forge_config.py  run-tests-windows.ps1  run_metasop_debug.py  run_metasop_demo.py  run_metasop_mock_pm_spec.py  set_openhands_api_key.ps1  show_sanitized_path.py  start-with-shadcn.cmd  start-with-shadcn.ps1  temp_inproc_create_and_run.py  test_dispatch.py  update-snapshot.config.json  update-snapshot.ps1  (+1 more)
(+9720 files in other folders)
