[build-system]
build-backend = "poetry.core.masonry.api"
requires = [
  "poetry-core",
]

[tool.poetry]
name = "forge-ai"
version = "0.55.0"
description = "Forge: Your AI-Powered Development Platform"
authors = [ "Forge Team" ]
license = "MIT"
readme = "README.md"
repository = "https://github.com/Forge/Forge"
packages = [
  { include = "forge", from = "backend" },
  { include = "agenthub", from = "backend", to = "forge" },
  { include = "integrations", from = "backend", to = "forge" },
  { include = "microagent", from = "backend", to = "forge" },
  { include = "knowledge_base", from = "backend", to = "forge" },
  { include = "resolver", from = "backend", to = "forge" },
  { include = "pyproject.toml", to = "forge" },
  { include = "poetry.lock", to = "forge" },
]
include = [
  "backend/microagents/**/*",
]
# VSCode extension build removed - desktop extension auto-installation is disabled
# build = "build_vscode.py"

[tool.poetry.dependencies]
python = "^3.12,<3.14"

# ============================================================================
# Core Framework & Web Server
# ============================================================================
fastapi = "*"
uvicorn = "*"
starlette = "^0.49.1"  # Security fix: CVE-2025-54121, CVE-2025-62727
sse-starlette = "^2.1.3"
python-multipart = "*"
anyio = "4.9.0"
# httpx-aiohttp removed - not used in core Forge

# LLM & AI Providers
# ============================================================================
openai = "*"
anthropic = "*"
google-generativeai = "*"

# ============================================================================
# Code Editing & Parsing (Ultimate Editor - Competitive Moat)
# ============================================================================
tree_sitter = "*"
tree-sitter-language-pack = "*"  # REQUIRED for Ultimate Editor (structure-aware editing)
diff-match-patch = "^20241021"
whatthepatch = "^1.0.6"

# ============================================================================
# Database Drivers
# ============================================================================
asyncpg = "^0.30.0"  # PostgreSQL
redis = ">=5.2,<7.0"

# ============================================================================
# Data Processing
# ============================================================================
numpy = "*"
pyarrow = { version = "21.0.0", optional = true }
# pandas removed from main dependencies - only used in test group (line 205)

# ============================================================================
# Cloud & Infrastructure
# ============================================================================
docker = "*"
kubernetes = "^33.1.0"
boto3 = "*"
Forge-aci = { version = ">=0.3.2", python = "^3.12,<3.14" }

# ============================================================================
# Third-Party Runtime Providers (Optional)
# ============================================================================
e2b = { version = ">=1.0.5,<1.8.0", optional = true }
modal = { version = ">=0.66.26,<1.2.0", optional = true }
runloop-api-client = { version = "0.50.0", optional = true }
daytona = { version = "0.24.2", optional = true }

# Utilities & Helpers
# ============================================================================
aiohttp = ">=3.9.0,!=3.11.13"  # Pin to avoid yanked version 3.11.13
requests = "^2.32.4"  # Security fix: CVE-2024-47081
urllib3 = "^2.5.0"  # Security fix: CVE-2025-50182, CVE-2025-50181
termcolor = "*"
toml = "*"
types-toml = "*"
json-repair = "*"
html2text = "*"
deprecated = "*"
pexpect = "*"
jinja2 = "^3.1.3"
python-dotenv = "*"
rapidfuzz = "^3.9.0"
dirhash = "*"
tornado = "*"
pathspec = "^0.12.1"
shellingham = "^1.5.4"
python-frontmatter = "^1.1.0"
bashlex = "^0.18"
# joblib removed - not used in core Forge
memory-profiler = "^0.61.0"
psutil = "*"
python-json-logger = "^3.2.1"
prompt-toolkit = "^3.0.50"
pythonnet = "*"

# ============================================================================
# Authentication & Security
# ============================================================================
pyjwt = "^2.9.0"
bcrypt = "^4.0.0"  # Password hashing
authlib = "^1.6.5"  # Security fix: CVE-2025-59420, CVE-2025-61920, CVE-2025-62706

# ============================================================================
# Document Processing
# ============================================================================
# document processing libraries (pptx, docx, pypdf) moved to non-core plugins
pillow = "^11.3.0"  # Security fix: CVE-2025-48379

# ============================================================================
# System Integration
# ============================================================================
libtmux = ">=0.37,<0.40"
zope-interface = "7.2"
tenacity = ">=8.5,<10.0"
protobuf = "^5.0.0,<6.0.0"  # Updated to support newer opentelemetry
opentelemetry-api = "^1.33.1"
opentelemetry-exporter-otlp-proto-grpc = "^1.33.1"
python-socketio = "^5.14.0"  # Security fix: CVE-2025-61765
pygithub = "^2.5.0"
fastmcp = "^2.12.0"  # Partial security fix - full fix (2.13.0) blocked by Forge-aci cachetools <6.0 constraint

# ============================================================================
# Security Fixes for Transitive Dependencies
# ============================================================================
h2 = "^4.3.0"  # Security fix: CVE-2025-57804 (CRLF Injection)
mcp = "^1.10.0"  # Security fix: CVE-2025-53365, CVE-2025-53366 (Uncaught Exceptions)

# ============================================================================
# Removed Dependencies (for reference)
# ============================================================================
# ML dependencies removed: torch, torchvision, torchaudio, transformers, sentencepiece, fasttext
# Evaluation dependencies removed: datasets, swegym, swebench, streamlit, etc.
# Docker-in-Docker removed from runtime image
# Evaluation directory deleted

[tool.poetry.extras]
third_party_runtimes = [ "e2b", "modal", "runloop-api-client", "daytona" ]
dev = [ "ruff", "mypy", "pre-commit", "pytest", "pytest-cov", "pytest-asyncio", "pytest-xdist" ]

[tool.poetry.group.dev]
optional = true

[tool.poetry.group.dev.dependencies]
ruff = "0.12.5"
mypy = "1.17.0"
pre-commit = "4.2.0"
build = "*"
types-setuptools = "*"
pytest = "^8.4.0"
grpcio = "^1.70.0"
grpcio-tools = "^1.70.0"

[tool.poetry.group.test]
optional = true

[tool.poetry.group.test.dependencies]
pytest = "*"
pytest-cov = "*"
pytest-asyncio = "*"
pytest-forked = "*"
pytest-xdist = "*"
pytest-playwright = "^0.7.0"
pytest-timeout = "^2.4.0"
pandas = "*"
reportlab = "*"
gevent = ">=24.2.1,<26.0.0"

[tool.poetry.group.runtime]
optional = true

[tool.poetry.group.runtime.dependencies]
# Runtime dependencies
flake8 = "*"
boto3-stubs = { extras = [ "s3" ], version = "^1.37.19" }
pyarrow = "21.0.0"  # Transitive dependency, pinned here to avoid conflicts

[tool.poetry.scripts]
forge = "forge.cli.entry:main"
Forge = "forge.cli.entry:main"  # Kept for backward compatibility

[tool.poetry-dynamic-versioning]
enable = true
style = "semver"

[tool.autopep8]
# autopep8 fights with mypy on line length issue
ignore = [ "E501" ]

[tool.black]
# prevent black (if installed) from changing single quotes to double quotes
skip-string-normalization = true

[tool.ruff]
lint.select = [ "D" ]
# ignore warnings for missing docstrings
lint.ignore = [ "D1" ]
lint.pydocstyle.convention = "google"

[tool.coverage.run]
source = [
  "forge",
]
omit = [
  "*/tests/*",
  "*/test_*.py",
  "*/__pycache__/*",
  "*/third_party/*",
  "*/evaluation/*",
]

[tool.coverage.report]
exclude_lines = [
  "pragma: no cover",
  "def __repr__",
  "raise AssertionError",
  "raise NotImplementedError",
  "if __name__ == .__main__.:",
  "if TYPE_CHECKING:",
  "@abstractmethod",
]
precision = 2
show_missing = true
skip_covered = false
fail_under = 95

