[build-system]
build-backend = "poetry.core.masonry.api"
requires = [
  "poetry-core",
]

[project]
name = "forge-ai"
version = "0.55.0"
description = "Forge: Your AI-Powered Development Platform"
readme = "README.md"
requires-python = ">=3.12,<3.14"
license = "MIT"
authors = [{ name = "Forge Team" }]
urls = { Repository = "https://github.com/Forge/Forge" }
dependencies = [
  "fastapi>=0.115,<1.0",
  "uvicorn>=0.30,<1.0",
  "starlette>=0.49.1,<0.50.0",
  "sse-starlette>=2.1.3,<3.0.0",
  "python-multipart>=0.0.20,<1.0",
  "anyio>=4.9,<5.0",
  "openai>=1.40,<3.0",
  "anthropic>=0.40,<1.0",
  "google-generativeai>=0.8,<1.0",
  "tree_sitter>=0.24.0,<0.25.0",
  "tree-sitter-language-pack>=0.7.3,<0.8.0",
  "diff-match-patch>=20241021,<20260000",
  "whatthepatch>=1.0.6,<2.0.0",
  "asyncpg>=0.30.0,<0.31.0",
  "numpy>=2.3.2,<3.0.0",
  "aiohttp>=3.9.0,!=3.11.13",
  "requests>=2.32.4,<3.0.0",
  "urllib3>=2.5.0,<3.0.0",
  "termcolor>=3.1.0,<4.0.0",
  "toml>=0.10.2,<0.11.0",
  "types-toml>=0.10.8.20240310,<0.11.0",
  "json-repair>=0.48.0,<1.0.0",
  "html2text>=2025.4.15,<2026.0.0",
  "deprecated>=1.2.18,<2.0.0",
  "jinja2>=3.1.3,<4.0.0",
  "python-dotenv>=1.1.1,<2.0.0",
  "rapidfuzz>=3.9.0,<4.0.0",
  "pathspec>=0.12.1,<0.13.0",
  "python-frontmatter>=1.1.0,<2.0.0",
  "bashlex>=0.18,<0.19",
  "psutil>=7.0.0,<8.0.0",
  "python-json-logger>=3.2.1,<4.0.0",
  "prompt-toolkit>=3.0.50,<4.0.0",
  "pillow>=11.3.0,<12.0.0",
  "libtmux>=0.37,<0.40",
  "zope-interface>=7.2,<8.0",
  "tenacity>=8.5,<10.0",
  "python-socketio>=5.14.0,<6.0.0",
  "pygithub>=2.5.0,<3.0.0",
  "fastmcp>=2.13.0,<3.0.0",
  "h2>=4.3.0,<5.0.0",
  "mcp>=1.10.0,<2.0.0",
]

[project.scripts]
forge = "backend.interface.entry:main"
Forge = "backend.interface.entry:main"

[project.optional-dependencies]
third_party_runtimes = [
  "e2b>=1.0.5,<1.8.0",
  "modal>=0.66.26,<1.2.0",
  "runloop-api-client==0.50.0",
  "daytona==0.24.2",
]
cloud = [
  "kubernetes>=33.1.0,<34.0.0",
  "boto3>=1.39.13,<2.0.0",
]
containers = [
  "docker>=7.1.0,<8.0.0",
]
telemetry = [
  "opentelemetry-api>=1.33.1,<2.0.0",
  "opentelemetry-exporter-otlp-proto-grpc>=1.33.1,<2.0.0",
  "protobuf>=5.0.0,<6.0.0",
]
caching = [
  "redis>=5.2,<7.0",
]
memory = [
  "chromadb>=1.4.0,<2.0.0",
  "qdrant-client>=1.16.2,<2.0.0",
  "sentence-transformers>=5.2.0,<6.0.0",
]
all = [
  "kubernetes>=33.1.0,<34.0.0",
  "boto3>=1.39.13,<2.0.0",
  "docker>=7.1.0,<8.0.0",
  "redis>=5.2,<7.0",
  "opentelemetry-api>=1.33.1,<2.0.0",
  "opentelemetry-exporter-otlp-proto-grpc>=1.33.1,<2.0.0",
  "protobuf>=5.0.0,<6.0.0",
  "chromadb>=1.4.0,<2.0.0",
  "qdrant-client>=1.16.2,<2.0.0",
  "sentence-transformers>=5.2.0,<6.0.0",
  "e2b>=1.0.5,<1.8.0",
  "modal>=0.66.26,<1.2.0",
  "runloop-api-client==0.50.0",
  "daytona==0.24.2",
]

[tool.poetry]
packages = [
  { include = "backend" },
]
include = [
  "backend/playbooks/**/*",
]
# VSCode extension build removed - desktop extension auto-installation is disabled
# build = "build_vscode.py"

[tool.poetry.group.dev]
optional = true

[tool.poetry.group.dev.dependencies]
ruff = "0.12.5"
mypy = "1.17.0"
pre-commit = "4.2.0"
build = "^1.2.2"
types-setuptools = "^80.9.0.20250529"
pytest = "^8.4.0"
grpcio = "^1.70.0"
grpcio-tools = "^1.70.0"

[tool.poetry.group.test]
optional = true

[tool.poetry.group.test.dependencies]
pytest = "^8.4.0"
pytest-cov = ">=4.1.0,<7.0.0"
pytest-asyncio = ">=0.21.1,<1.0.0"
pytest-forked = ">=1.6.0,<2.0.0"
pytest-xdist = ">=3.8.0,<4.0.0"
pytest-playwright = "^0.7.0"
pytest-timeout = "^2.4.0"
pandas = ">=2.3.1,<3.0.0"
reportlab = ">=4.4.3,<5.0.0"
gevent = ">=24.2.1,<26.0.0"

[tool.poetry.group.runtime]
optional = true

[tool.poetry.group.runtime.dependencies]
# Runtime dependencies
flake8 = ">=7.3.0,<8.0.0"
boto3-stubs = { extras = [ "s3" ], version = "^1.37.19" }
pyarrow = "21.0.0"  # Transitive dependency, pinned here to avoid conflicts

[tool.poetry-dynamic-versioning]
enable = true
style = "semver"

[tool.autopep8]
# autopep8 fights with mypy on line length issue
ignore = [ "E501" ]

[tool.black]
# prevent black (if installed) from changing single quotes to double quotes
skip-string-normalization = true

[tool.ruff]
lint.select = [ "D" ]
# ignore warnings for missing docstrings
lint.ignore = [ "D1" ]
lint.pydocstyle.convention = "google"

[tool.coverage.run]
source = [
  "backend",
]
omit = [
  "*/tests/*",
  "*/test_*.py",
  "*/__pycache__/*",
  "*/third_party/*",
  "*/evaluation/*",
]

[tool.coverage.report]
exclude_lines = [
  "pragma: no cover",
  "def __repr__",
  "raise AssertionError",
  "raise NotImplementedError",
  "if __name__ == .__main__.:",
  "if TYPE_CHECKING:",
  "@abstractmethod",
]
precision = 2
show_missing = true
skip_covered = false
fail_under = 95

